# Offside_Tool

./: .env.example  .env.test  .gitignore  DIRECTORY_TREE.txt  Dockerfile  Dockerfile.test  FRONTEND_INTEGRATION_GUIDE.md  IMPLEMENTATION_CHECKLIST.md  MVP_FEATURES.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RUN_AND_TEST.md  TESTING_AND_INTEGRATION.md  docker-compose.yml  init_db.sql  pyproject.toml  pytest.ini  setup.sh  test_mvp_features.py
.github/workflows/: ci.yml
app/: __init__.py  celery_app.py  main.py
app/api/: deps.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: auth.py  players.py  users.py  watchlist.py
app/core/: __init__.py  config.py  security.py
app/crud/: __init__.py  player.py  user.py  watchlist.py
app/db/: __init__.py  session.py
app/models/: __init__.py  player.py  user.py  watchlist.py
app/schemas/: __init__.py  player.py  user.py
app/scrapers/: __init__.py  base.py  transfermarkt.py
app/tasks/: scraping_tasks.py
migrations/: README  env.py
migrations/versions/: 001_initial_migration.py  002_create_users_table.py  003_create_watchlist_table.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: test_api_auth.py  test_api_players.py  test_api_players_mvp.py  test_api_players_v2.py  test_api_watchlist.py
tests/unit/: __init__.py  test_crud_player.py
